--- a/recipes/baked_chicken.html
+++ b/recipes/baked_chicken.html
@@ -1,38 +1,3 @@
-Prep:
-10 mins
-Cook:
-50 mins
-Total:
-1 hr
-Servings:
-4
-Yield:
-4 servings
------------------------------------------------------
-½ cup prepared barbecue sauce
-
-¼ cup soy sauce
-
-¼ cup red wine
-
-¼ cup maple syrup
-
-1 tablespoon chili powder
-
-1 tablespoon dry mustard powder
-
-1 tablespoon garlic powder
-
-1 teaspoon onion powder
-
-1 teaspoon ground cumin
-
-4 skinless, boneless chicken breast halves
-
-1 tablespoon cornstarch
-
-1 cup water
------------------------------------------------------
 Step 1
 Preheat oven to 400 degrees F (200 degrees C).
 
@@ -54,3 +19,62 @@ Pour the remaining sauce into a saucepan, place over medium heat, and bring to a
 Whisk the cornstarch and water together in a small bowl until smooth. Whisk the cornstarch mixture into the sauce; 
 reduce heat to a simmer, and allow the sauce to thicken, whisking constantly. Return the chicken to the dish, 
 and pour the thickened sauce over the chicken to serve.
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Backed Chicken BBQ sauce</title>
+    </head>
+    <body>
+        <h1>Backed Chicken with BBQ sauce</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F06%2F15%2FBaked-Chicken-In-a-Sweet-BBQ-Sauce-France-C-4x3-1-2000.jpg&q=60" alt="Image of the backed chicken with BBQ sauce">
+        <p>What I had to do to squeeze this recipe from my neighbor...but it's worth it. This is a scrumptious version of sticky chicken.</p>
+        <ul>
+            <li>Prep: 10 mins</li>
+            <li>Cook: 50 mins</li>
+            <li>Total: 1 hr</li>
+            <li>Servings: 4</li>
+            <li>Yield: 4 servings</li>
+        </ul>
+        <h3>Ingredients: </h3>
+        <ul>
+            <li>½ cup prepared barbecue sauce</li>
+            <li>¼ cup soy sauce</li>
+            <li>¼ cup red wine</li>
+            <li>¼ cup maple syrup</li>
+            <li>1 tablespoon chili powder</li>
+            <li>1 tablespoon dry mustard powder</li>
+            <li>1 tablespoon garlic powder</li>
+            <li>1 teaspoon onion powder</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>4 skinless, boneless chicken breast halves</li>
+            <li>1 tablespoon cornstarch</li>
+            <li>1 cup water</li>
+        </ul>
+        <h3>Directions: </h3>
+        <ol>
+            <li>
+                Preheat oven to 400 degrees F (200 degrees C).
+            </li>
+            <li>
+                Whisk together the barbecue sauce, soy sauce, red wine, maple syrup, chili powder, 
+                dry mustard powder, garlic powder, onion powder, and cumin in a bowl until thoroughly combined.
+            </li>
+            <li>
+                Place the chicken breasts into a 9x13-inch baking dish, and pour the sauce over the chicken. 
+                Turn the chicken pieces over in the sauce to coat both sides.
+            </li>
+            <li>
+                Bake in the preheated oven until the chicken is no longer pink and the juices run clear, about 40 minutes. 
+                An instant-read thermometer inserted into the thickest part of a breast should read 160 degrees F (70 degrees C). 
+                Remove the chicken from the baking dish, and keep warm.
+            </li>
+            <li>
+                Pour the remaining sauce into a saucepan, place over medium heat, and bring to a boil. 
+                Whisk the cornstarch and water together in a small bowl until smooth. Whisk the cornstarch mixture into the sauce; 
+                reduce heat to a simmer, and allow the sauce to thicken, whisking constantly. Return the chicken to the dish, 
+                and pour the thickened sauce over the chicken to serve.
+            </li>
+        </ol>
+    </body>
+</html>
