Adding french toast and caprese's recipe html files

--- a/recipes/caprese.html
+++ b/recipes/caprese.html
@@ -1,24 +1,33 @@
-Prep:
-15 mins
-Total:
-15 mins
-Servings:
-6
-Yield:
-6 servings
------------------------------------------------------
-4 large ripe tomatoes, sliced 1/4 inch thick
-
-1 pound fresh mozzarella cheese, sliced 1/4 inch thick
-
-⅓ cup fresh basil leaves
-
-3 tablespoons extra virgin olive oil
-
-fine sea salt to taste
-
-freshly ground black pepper to taste
------------------------------------------------------
-Step 1
-On a large platter, alternate and overlap the tomato slices, mozzarella cheese slices, and basil leaves. 
-Drizzle with olive oil. Season with sea salt and pepper.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Caprese</title>
+    </head>
+    <body>
+        <h1>Caprese</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F874978.jpg&q=60" alt="Image of the Caprese">
+        <p>The caprese is a quick and easy solution for who want a good meal.</p>
+        <ul>
+            <li>Prep: 15 mins</li>
+            <li>Total: 15 mins</li>
+            <li>Servings: 6</li>
+            <li>Yield: 6 servings</li>
+        </ul>
+        <h3>Ingredients: </h3>
+        <ul>
+            <li>4 large ripe tomatoes, sliced 1/4 inch thick</li>
+            <li>1 pound fresh mozzarella cheese, sliced 1/4 inch thick</li>
+            <li>⅓ cup fresh basil leaves</li>
+            <li>3 tablespoons extra virgin olive oil</li>
+            <li>fine sea salt to taste</li>
+            <li>freshly ground black pepper to taste</li>
+        </ul>
+        <h3>Directions: </h3>
+        <ol>
+            <li>
+                On a large platter, alternate and overlap the tomato slices, mozzarella cheese slices, and basil leaves. 
+                Drizzle with olive oil. Season with sea salt and pepper.
+            </li>
+        </ol>
+    </body>
+</html>
