--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -1,47 +1,54 @@
-Prep:
-5 mins
-Cook:
-10 mins
-Total:
-15 mins
-Servings:
-3
-Yield:
-6 slices
------------------------------------------------------
-⅓ cup half-and-half
-
-5 large egg whites
-
-2 tablespoons confectioners' sugar
-
-2 tablespoons brown sugar
-
-¼ teaspoon vanilla extract
-
-¼ teaspoon lemon extract
-
-¼ teaspoon salt
-
-2 tablespoons unsalted butter, or more as needed
-
-6 slices bread
-
-½ cup maple syrup, or to taste
-
-3 tablespoons whipped cream, or to taste
------------------------------------------------------
-Step 1
-Combine half-and-half, egg whites, confectioners' sugar, brown sugar, vanilla, lemon extract, and salt in a bowl; 
-whip together with a whisk or electric whisk until well blended, about 30 seconds. Pour mixture into a large, flat container.
-
-Step 2
-Put one bread slice in the container and flip so it is coated on both sides, almost saturated.
-
-Step 3
-Melt 1 tablespoon butter in a frying pan over medium heat until sizzling. Add soaked bread slice to the pan; 
-you can do more than one depending on the size of the pan. Fry until medium brown and edges are crispy, 
-about 1 1/2 minutes per side. Continue cooking in batches, dipping bread and frying, and adding butter as necessary.
-
-Step 4
-Serve French toast with maple syrup and add whipped cream on top.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>French Toast</title>
+    </head>
+    <body>
+        <h1>French Toast</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F06%2F14%2FLemon-Vanilla-French-Toast-Tammy-Lynn-4x3-1-2000.jpg&q=60" alt="Image of the french toasts">
+        <p>
+            Decadent? Yes! Sweet? Yes! Tasty? Yes! I just whipped this up this morning. I love things lemon, and it has to be sweet. 
+            None of that tartness, no thank you. This is something fun to make Sunday morning.
+            Some kids may not like the lemon flavoring, but the sweetness may be an attraction.
+        </p>
+        <ul>
+            <li>Prep: 5 mins</li>
+            <li>Cook: 10 mins</li>
+            <li>Total: 15 mins</li>
+            <li>Servings: 3</li>
+            <li>Yield: 6 slices</li>
+        </ul>
+        <h3>Ingredients: </h3>
+        <ul>
+            <li>⅓ cup half-and-half</li>
+            <li>5 large egg whites</li>
+            <li>2 tablespoons confectioners' sugar</li>
+            <li>2 tablespoons brown sugar</li>
+            <li>¼ teaspoon vanilla extract</li>
+            <li>¼ teaspoon lemon extract</li>
+            <li>¼ teaspoon salt</li>
+            <li>2 tablespoons unsalted butter, or more as needed</li>
+            <li>6 slices bread</li>
+            <li>½ cup maple syrup, or to taste</li>
+            <li>3 tablespoons whipped cream, or to taste</li>
+        </ul>
+        <h3>Directions: </h3>
+        <ol>
+            <li>
+                Combine half-and-half, egg whites, confectioners' sugar, brown sugar, vanilla, lemon extract, and salt in a bowl; 
+                whip together with a whisk or electric whisk until well blended, about 30 seconds. Pour mixture into a large, flat container.
+            </li>
+            <li>
+                Put one bread slice in the container and flip so it is coated on both sides, almost saturated.
+            </li>
+            <li>
+                Melt 1 tablespoon butter in a frying pan over medium heat until sizzling. Add soaked bread slice to the pan; 
+                you can do more than one depending on the size of the pan. Fry until medium brown and edges are crispy, 
+                about 1 1/2 minutes per side. Continue cooking in batches, dipping bread and frying, and adding butter as necessary.
+            </li>
+            <li>
+                Serve French toast with maple syrup and add whipped cream on top.
+            </li>
+        </ol>
+    </body>
+</html>
